Tweaked graphic and titles

--- a/_posts/2014-11-18-T42-died.md
+++ b/_posts/2014-11-18-T42-died.md
@@ -3,7 +3,7 @@ title: T42 died
 categories: news
 ---
 
-##### goodbye my friend
+### Goodbye my friend
 
 Today, while i was going to school by train, my T42 stop working.
 
@@ -11,7 +11,7 @@ I build it from a T42 and a T40 taken from the tip.
 It's fan needed a boost for start, every time I need to turn it on I had to blow into the fan.
 But it's keyboard was so comfortable... The trackpoit was so useful when coding in crowded places like trains.
 
-##### consequences
+### Consequences
 
 The impact of this event on the cSploit development it's huge.
 I leave home at 6:00 AM and I come back from school around 7/8 PM.
@@ -21,6 +21,6 @@ The time I can spend on cSploit is now drastically reduced.
 
 Another consequence is that I was using the T42 as wireless bridge between my LAN and my neighborhood WiFi ( without his agreement :grin: ). Now I have to use the limited bandwith of my mobile data plan.
 
-##### solutions
+### Solutions
 I can spend some time on trying to repair the T42, but this is the period for partial exams, I cannot do it right now.
-Another solution is to buy an used thinkpad. But I have to work about a month for earn enought ( i 'm not working so much because I want to graduate this year ).
+Another solution is to buy an used thinkpad. But I have to work about a month for earn enought (I'm not working so much because I want to graduate this year).
